...
    <string name="profile_picture_description">Profile Picture</string>
    <string name="bio_label">Bio</string>
    <string name="bio_hint">Enter your bio</string>
    <string name="menu_button_description">Menu</string>
    <string name="app_short_name">IS</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="following">Following</string>
    <string name="home_button_description">Home</string>
    <string name="search_button_description">Search</string>
    <string name="favorites_button_description">Favorites</string>
    <string name="profile_button_description">Profile</string>
    <string name="app_logo_description">App Logo</string>
    <string name="welcome_back">Welcome back!</string>
...
    <string name="filter_moods_description">Filter Moods</string>
    <string name="search_hint">Search</string>
    <string name="no_results_found">No results found.</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="remove_image">Remove Image</string>
    <string name="apply_filter_description">Apply Filter</string>
    <string name="filter_mood_title">Filter Mood</string>
    <string name="show_recent_week">Show Mood from most recent week</string>
    <string name="emotional_state_label">Emotional State</string>
    <string name="reason_label">Reason</string>
    <string name="filter_reason_hint">Enter reason to filter</string>
    <string name="no_request">No requests.</string>
    <string name="unfollow">Unfollow</string>
...
