<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/alone"
        android:title="Alone" />
    <item
        android:id="@+id/with_another"
        android:title="With another person" />
    <item
        android:id="@+id/with_several"
        android:title="With several people" />
    <item
        android:id="@+id/with_crowd"
        android:title="With a crowd" />
</menu>
